<resources>
    <string name="app_name">Fudget Budget</string>
    <string name="income_transactions_list_title">Income</string>
    <string name="expense_transactions_list_title">Expenses</string>

    <string name="id_tag">id_tag</string>
    <string name="object_type_tag">object_type_tag</string>
    <string name="income_tag">income_tag</string>
    <string name="date_tag">Date</string>
    <string name="label_tag">Label</string>
    <string name="amount_tag">Amount</string>
    <string name="expense_tag">expense_tag</string>
    <string name="note_tag">Note</string>
    <string name="date_value_tag">date_value_tag</string>
    <string name="recurrence_tag">recurrance_tag</string>

    <string name="date_key">Date</string>
    <string name="key_projection_end_balance">End Bal</string>
    <string name="key_projection_expense">Expense</string>
    <string name="key_projection_income">Income</string>
    <string name="key_transaction_amount">Amount</string>
    <string name="key_transaction_label">Label</string>
    <string name="key_record_date">Date</string>
    <string name="key_record_label">Label</string>
    <string name="key_record_amount">Amount</string>
    <string name="key_transaction_note">Note</string>
    <string name="key_projected_transactions">Future Occurances</string>
    <string name="recurrance_key">Recurrs</string>
    <string name="transaction_recurrence_value" />
    <string name="projected_date_key">Scheduled Date</string>
    <string name="scheduled_date_key">Original transaction date</string>
    <string name="scheduled_amount_key" >Original schedule amount</string>
    <string name="transaction_type_income">Income Transaction</string>
    <string name="transaction_type_expense">Expense Transaction</string>
    <string name="transaction_type_unscheduled">Unscheduled Transaction</string>
    <string name="objectStoredAsTag" />
    <string name="balance_tag">Balance</string>
    <string name="expendable_balance">Expendable Funds</string>
    <string name="average_net_balance">Average Net Balance</string>
    <string name="average_income_balance">Average Income Balance</string>
    <string name="average_expense_balance">Average Expense Balance</string>
    <string name="date_string_long" />
    <string name="date_string_short_md" />
    <string name="date_string_long_mdy">date_string_long_mdy</string>
    <string name="transaction_recurrence_frequency">frequency</string>
    <string name="transaction_recurrence_period">period</string>
    <string name="transaction_recurrence_stop_bit">Stop Recurring</string>
    <string name="number_format_add_suffix">number with suffix</string>
    <string name="date_string_dayofweekinmonth">dayofweekinmonth</string>
    <string name="date_string_dateofmonth">dateofmonth</string>
    <string name="month_tag">Month</string>
    <string name="week_tag">Week</string>
    <string name="year_tag">Year</string>
    <string name="day_tag">Day</string>
    <string name="date_long_dowmd">long dayofweek month year</string>
    <string name="date_string_dayofweekanddate">day of week and date</string>
    <string name="records_type_all">records_type_all</string>
    <string name="balancesheet_projections">balancesheet projections period list</string>
</resources>
