<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/fulldisplay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/key_transaction_label"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/date_key"
            android:textAlignment="textStart"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/recurrance_key"
            android:textAlignment="textStart"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recurrance_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/key_transaction_amount"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/key_transaction_note"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/note_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/key_projected_transactions"
            android:textSize="12dp"
            android:textStyle="bold" />

        <include layout="@layout/layout_projected_transactions_list" />

    </LinearLayout>

</LinearLayout>