<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Label" />

            <EditText
                android:id="@+id/label_value"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/key_transaction_amount" />

            <EditText
                android:id="@+id/amount_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/key_transaction_note" />

            <EditText
                android:id="@+id/note_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout android:id="@+id/property_layout_recurrence_readable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Repeats" />

            <TextView android:id="@+id/readable_recurrence_value"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout android:id="@+id/property_layout_recurrence_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Repeats" />

            <Switch
                android:id="@+id/recurrence_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

        <LinearLayout android:id="@+id/property_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingHorizontal="24dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_key"/>

            <Button
                android:id="@+id/date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </LinearLayout>

        <include android:id="@+id/property_layout_recurrence_editor"
            layout="@layout/layout_transaction_recurrance_editor"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"/>

        <LinearLayout android:id="@+id/property_layout_recurrence_projections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/key_projected_transactions"
                android:textAlignment="center"
                android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>




<!--<RelativeLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="horizontal"-->
<!--android:background="@color/colorSecondary"-->
<!--android:paddingHorizontal="24dp">-->

<!--<Button android:id="@+id/reset_projections_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="reset projections"-->
<!--    android:layout_alignParentStart="true"/>-->

<!--<Button android:id="@+id/toggle_editor_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_alignParentEnd="true"-->
<!--    android:text="modify"/>-->

<!--<Button android:id="@+id/editor_delete_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_alignParentStart="true"-->
<!--    android:visibility="gone"-->
<!--    android:text="delete"/>-->

<!--<Button android:id="@+id/editor_update_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_toStartOf="@id/editor_cancel_button"-->
<!--    android:visibility="gone"-->
<!--    android:text="update"/>-->

<!--<Button android:id="@+id/editor_cancel_button"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="cancel"-->
<!--    android:visibility="gone"-->
<!--    android:layout_alignParentEnd="true"/>-->

<!--</RelativeLayout>-->








